--- a/new-properties.html
+++ b/new-properties.html
@@ -82,18 +82,20 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="..." alt="...">
+                <img src="images/new-1.jpg" alt="304 olsen rd">
                 <div class="carousel-caption">
-                  ...
+                  <h3>304 olsen rd</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque molestias, earum velit alias esse, voluptas error repellendus dignissimos repudiandae quaerat, amet labore autem, vero commodi saepe corporis delectus quo fugit?</p>
                 </div>
               </div>
               <div class="item">
-                <img src="..." alt="...">
+                <img src="images/new-2.jpg" alt="9872 fremont drive">
                 <div class="carousel-caption">
-                  ...
+                   <h3>9872 fremont drive</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque molestias, earum velit alias esse, voluptas error repellendus dignissimos repudiandae quaerat, amet labore autem, vero commodi saepe corporis delectus quo fugit?</p>
                 </div>
-              </div>
-              ...
+              </div>å
+              
             </div>
 
             <!-- Controls -->
